UI/UX updates: meta tags, mobile menu, hero section, stats, color scheme

--- a/index.html
+++ b/index.html
@@ -3,18 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quality Turbo Power Services - Industrial Turbine Services</title>
-    <meta name="description" content="Quality Turbo Power Services is a global service provider for power plant, petrochemicals, steel, fertilizers, cement industries. Offering overhauls, refurbishments, repairs and turbine services." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
+    <link rel="shortcut icon" href="/favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
+    
+    <title>Quality Turbo Power Services - Industrial Turbine Services Hyderabad</title>
+    <meta name="description" content="Quality Turbo Power Services - Complete rotating equipment solutions in Hyderabad. Expert turbine erection, commissioning, overhauls, repairs, and maintenance for power plants, petrochemicals, steel, fertilizers, and cement industries." />
+    <meta name="keywords" content="turbine services, power plant equipment, turbine erection, turbine commissioning, turbine overhaul, turbine repair, rotating equipment, Hyderabad, industrial maintenance, steam turbine, gas turbine, Quality Turbo, QTPS" />
     <meta name="author" content="Quality Turbo Power Services" />
+    <meta name="robots" content="index, follow" />
+    <meta name="geo.region" content="IN-TG" />
+    <meta name="geo.placename" content="Hyderabad" />
+    <link rel="canonical" href="https://qualityturbopower.com/" />
 
     <meta property="og:title" content="Quality Turbo Power Services - Industrial Turbine Services" />
-    <meta property="og:description" content="Global provider of turbine overhauls, refurbishments, spares & services for power plants and industrial facilities." />
+    <meta property="og:description" content="Complete rotating equipment solutions - turbine erection, commissioning, overhauls, repairs, and maintenance in Hyderabad." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:url" content="https://qualityturbopower.com/" />
+    <meta property="og:site_name" content="Quality Turbo Power Services" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@QualityTurboPower" />
+    <meta name="twitter:image" content="/og-image.png" />
+    <meta name="twitter:title" content="Quality Turbo Power Services" />
+    <meta name="twitter:description" content="Complete rotating equipment solutions for industrial turbine services." />
   </head>
 
   <body>
