--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
     <link rel="shortcut icon" href="/favicon.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
     
-    <title>Quality Turbo Power Services - Industrial Turbine Services Hyderabad</title>
-    <meta name="description" content="Quality Turbo Power Services - Complete rotating equipment solutions in Hyderabad. Expert turbine erection, commissioning, overhauls, repairs, and maintenance for power plants, petrochemicals, steel, fertilizers, and cement industries." />
-    <meta name="keywords" content="turbine services, power plant equipment, turbine erection, turbine commissioning, turbine overhaul, turbine repair, rotating equipment, Hyderabad, industrial maintenance, steam turbine, gas turbine, Quality Turbo, QTPS" />
-    <meta name="author" content="Quality Turbo Power Services" />
+    <title>Quality Turbine Power Services - Industrial Turbine Services Hyderabad</title>
+    <meta name="description" content="Quality Turbine Power Services - Complete rotating equipment solutions in Hyderabad. Expert turbine erection, commissioning, overhauls, repairs, and maintenance for power plants, petrochemicals, steel, fertilizers, and cement industries." />
+    <meta name="keywords" content="turbine services, power plant equipment, turbine erection, turbine commissioning, turbine overhaul, turbine repair, rotating equipment, Hyderabad, industrial maintenance, steam turbine, gas turbine, Quality Turbine, QTPS" />
+    <meta name="author" content="Quality Turbine Power Services" />
     <meta name="robots" content="index, follow" />
     <meta name="geo.region" content="IN-TG" />
     <meta name="geo.placename" content="Hyderabad" />
     <link rel="canonical" href="https://qualityturbopower.com/" />
 
-    <meta property="og:title" content="Quality Turbo Power Services - Industrial Turbine Services" />
+    <meta property="og:title" content="Quality Turbine Power Services - Industrial Turbine Services" />
     <meta property="og:description" content="Complete rotating equipment solutions - turbine erection, commissioning, overhauls, repairs, and maintenance in Hyderabad." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og-image.png" />
     <meta property="og:url" content="https://qualityturbopower.com/" />
-    <meta property="og:site_name" content="Quality Turbo Power Services" />
+    <meta property="og:site_name" content="Quality Turbine Power Services" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@QualityTurboPower" />
+    <meta name="twitter:site" content="@QualityTurbinePower" />
     <meta name="twitter:image" content="/og-image.png" />
-    <meta name="twitter:title" content="Quality Turbo Power Services" />
+    <meta name="twitter:title" content="Quality Turbine Power Services" />
     <meta name="twitter:description" content="Complete rotating equipment solutions for industrial turbine services." />
   </head>
 
