Set logo as favicon/og image and add meta tags across pages

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
-    <link rel="shortcut icon" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
+    <link rel="shortcut icon" href="/logo.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
     
     <title>Quality Turbine Power Services - Industrial Turbine Services Hyderabad</title>
@@ -25,13 +25,13 @@
     <meta property="og:title" content="Quality Turbine Power Services - Industrial Turbine Services" />
     <meta property="og:description" content="Complete rotating equipment solutions - turbine erection, commissioning, overhauls, repairs, and maintenance in Hyderabad." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/logo.png" />
     <meta property="og:url" content="https://qualityturbopower.com/" />
     <meta property="og:site_name" content="Quality Turbine Power Services" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@QualityTurbinePower" />
-    <meta name="twitter:image" content="/og-image.png" />
+    <meta name="twitter:image" content="/logo.png" />
     <meta name="twitter:title" content="Quality Turbine Power Services" />
     <meta name="twitter:description" content="Complete rotating equipment solutions for industrial turbine services." />
   </head>
